--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,12 +4,17 @@ workflow:
       when: never
     - when: always
 
+image: python:3.10-slim
+default:
+  tags:
+    - test_br200
+
 stages:
     - test
-
+    
 run_test:
     stage: test
-    image: python:3.8.10
+    image: python
     before_script:
         - apt-get update
         - pip install -r backend/requirements.txt
