--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,1 +1,44 @@
- 
+allure-pytest==2.13.5
+allure-python-commons==2.13.5
+attrs==23.2.0
+bcrypt==4.1.3
+certifi==2024.7.4
+cffi==1.17.0rc1
+charset-normalizer==3.3.2
+cryptography==42.0.0
+exceptiongroup==1.2.2
+future==1.0.0
+gns3fy==0.8.0
+graphviz==0.20.3
+idna==3.7
+iniconfig==2.0.0
+jinja2==3.1.4
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+mdurl==0.1.2
+netmiko==4.4.0
+ntc-templates==6.0.0
+packaging==24.1
+paramiko==3.4.0
+pexpect==4.9.0
+ping3==4.0.8
+pluggy==1.5.0
+pprintpp==0.4.0
+ptyprocess==0.7.0
+pycparser==2.22
+pydantic==1.10.17
+pygments==2.18.0
+PyNaCl==1.5.0
+pyserial==3.5
+pytest==8.3.1
+pytest-clarity==1.0.1
+PyYAML==6.0.1
+requests==2.32.3
+rich==13.7.1
+scp==0.15.0
+six==1.16.0
+tabulate==0.9.0
+textfsm==1.1.3
+tomli==2.0.1
+typing-extensions==4.12.2
+urllib3==2.2.2
