--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,10 +15,21 @@ stages:
 run_test:
     stage: test
     image: python
+    artifacts:
+      when: always
+      expire_in: 5 days
+      paths:
+          - allure-report
     before_script:
         - apt-get update
+        - apt install -y openjdk-17-jdk openjdk-17-jre
+        - wget https://github.com/allure-framework/allure2/releases/download/2.30.0/allure-2.30.0.tgz && tar -zxvf allure-2.30.0.tgz -C /opt/ && ln -s /opt/allure-2.30.0/bin/allure /usr/bin/allure
+        - pip install -r requirements.txt
+
         - pip install --upgrade pip
         - pip install -r backend/requirements.txt
     script:
         - cd backend/tests
-        - pytest test_commands_show.py -v
+        - pytest -v test_commands_show.py --alluredir=allure-results
+    after_scripts:
+        - allure generate - c allure-results allure-report
