--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,6 +24,7 @@ run_test:
         - apt-get update
         - apt install -y openjdk-17-jdk openjdk-17-jre
         - mkdir allure-results
+        - mkdir allure-report
         - wget https://github.com/allure-framework/allure2/releases/download/2.30.0/allure-2.30.0.tgz && tar -zxvf allure-2.30.0.tgz -C /opt/ && ln -s /opt/allure-2.30.0/bin/allure /usr/bin/allure
         - pip install -r requirements.txt
 
