--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,8 +30,9 @@ run_test:
     script:
         - cd backend/tests
         - pytest -v test_commands_show.py --alluredir=allure-results
-    after_script:
         - allure generate -c allure-results -o allure-report
+    # after_script:
+    #     - allure generate -c allure-results -o allure-report
 pages:
   stage: report
   needs:
