--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,7 +20,7 @@ run_test:
       when: always
       expire_in: 5 days
       paths:
-          - allure-report
+          - backend/tests/allure-report
     before_script:
         - apt-get update
         - apt install -y openjdk-17-jdk openjdk-17-jre
@@ -30,9 +30,9 @@ run_test:
     script:
         - cd backend/tests
         - pytest -v test_commands_show.py --alluredir=allure-results
+        # - allure generate -c allure-results -o allure-report
+    after_script:
         - allure generate -c allure-results -o allure-report
-    # after_script:
-    #     - allure generate -c allure-results -o allure-report
 pages:
   stage: report
   needs:
