--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,7 +20,7 @@ run_test:
       when: always
       expire_in: 5 days
       paths:
-          - allure-report
+          - backend/tests/allure-report
     before_script:
         - apt-get update
         - apt install -y openjdk-17-jdk openjdk-17-jre
@@ -46,4 +46,4 @@ pages:
     when: on_success
     expire_in: never
     paths:
-        - public
+        - backend/tests/public
