--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,7 +20,8 @@ run_test:
       when: always
       expire_in: 5 days
       paths:
-          - allure-report
+          - backend/tests/allure-report
+          - backend/tests/report_html
     before_script:
         - apt-get update
         - apt install -y openjdk-17-jdk openjdk-17-jre
@@ -29,7 +30,7 @@ run_test:
         - pip install -r backend/requirements.txt
     script:
         - cd backend/tests
-        - pytest -v test_commands_show.py --alluredir=allure-results
+        - pytest -v test_commands_show.py --alluredir=allure-results --html=BULAT_TEST.html
         # - allure generate -c allure-results -o allure-report
     after_script:
         - cd backend/tests
@@ -42,8 +43,9 @@ pages:
     - cd backend/tests
     - mkdir public
     - cp -r allure-report/* public
+    - cp -r report_html/* public
   artifacts:
     when: on_success
     expire_in: never
     paths:
-        - public
+        - backend/tests/public
