--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -32,6 +32,8 @@ PyNaCl==1.5.0
 pyserial==3.5
 pytest==8.3.1
 pytest-clarity==1.0.1
+pytest-html==4.1.1
+pytest-metadata==3.1.1
 PyYAML==6.0.1
 requests==2.32.3
 rich==13.7.1
