add html report3

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,11 +41,13 @@ pages:
     - run_test
   script:
     - cd backend/tests
-    - mkdir public
-    - cp -r allure-report/* public
-    - cp -r report_html/* public
+    - mkdir allure-report_public
+    - mkdir html-report_public
+    - cp -r allure-report/* allure-report_public
+    - cp -r report_html/* html-report_public
   artifacts:
     when: on_success
     expire_in: never
     paths:
-        - backend/tests/public
+        - backend/tests/allure-report_public
+        - backend/tests/html-report_public
