--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,5 +50,5 @@ pages:
     when: on_success
     expire_in: never
     paths:
-        - allure-report_public
-        - html-report_public
+        - backend/tests/allure-report_public
+        - backend/tests/html-report_public
