--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,15 +40,15 @@ pages:
   needs:
     - run_test
   script:
-    - cd backend/tests
-    - mkdir backend/allure-report_public
-    - mkdir backend/html-report_public
-    - cp -r allure-report/* backend/allure-report_public
-    - cp -r report_html/* backend/html-report_public
+    - cd ../../
+    - mkdir allure-report_public
+    - mkdir html-report_public
+    - cp -r backend/tests/allure-report/* allure-report_public
+    - cp -r backend/tests/report_html/* html-report_public
     
   artifacts:
     when: on_success
     expire_in: never
     paths:
-        - backend/allure-report_public
-        - backend/html-report_public
+        - allure-report_public
+        - html-report_public
