--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,7 +21,7 @@ run_check_fw:
       when: always
       expire_in: 5 days
       paths:
-          - backend/tests/allure-report_fw
+          # - backend/tests/allure-report_fw
           - backend/tests/report_html_fw
     before_script:
         - apt-get update
@@ -43,24 +43,24 @@ run_test:
     image: python
     artifacts:
       when: always
-      expire_in: 5 days7-jdk openjdk-17-jre
-        - wget https://github.com/a
+      expire_in: 5 days
       paths:
-          - backend/tests/allure-report
+          # - backend/tests/allure-report
           - backend/tests/report_html
     before_script:
         - apt-get update
-        - apt install -y openjdk-17-jdk openjdk-17-jre
-        - wget https://github.com/allure-framework/allure2/releases/download/2.30.0/allure-2.30.0.tgz && tar -zxvf allure-2.30.0.tgz -C /opt/ && ln -s /opt/allure-2.30.0/bin/allure /usr/bin/allure
+        # - apt install -y openjdk-17-jdk openjdk-17-jre
+        # - wget https://github.com/allure-framework/allure2/releases/download/2.30.0/allure-2.30.0.tgz && tar -zxvf allure-2.30.0.tgz -C /opt/ && ln -s /opt/allure-2.30.0/bin/allure /usr/bin/allure
         - pip install --upgrade pip
         - pip install -r backend/requirements.txt
     script:
         - cd backend/tests
-        - pytest -v --html=report_html/BULAT_TEST.html --alluredir=allure-results test_cmd_show.py 
+        - pytest -v --html=report_html/BULAT_TEST.html test_cmd_show.py 
+        # - pytest -v --html=report_html/BULAT_TEST.html --alluredir=allure-results test_cmd_show.py 
         # - allure generate -c allure-results -o allure-report
     after_script:
         - cd backend/tests
-        - allure generate -c allure-results -o allure-report
+        # - allure generate -c allure-results -o allure-report
 pages:
   stage: report
   needs:
@@ -68,14 +68,14 @@ pages:
     - run_check_fw
   script:
     # - cd ../../
-    - mkdir allure-report_public
+    # - mkdir allure-report_public
     - mkdir html-report_public
-    - cp -r backend/tests/allure-report/* allure-report_public
+    # - cp -r backend/tests/allure-report/* allure-report_public
     - cp -r backend/tests/report_html/* html-report_public
     
   artifacts:
     when: on_success
     expire_in: never
     paths:
-        - allure-report_public
+        # - allure-report_public
         - html-report_public
