--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,6 @@
 stages:
    # - build
-   - test_cmd_show
-   - test_speed_interface
-   - test_check_ip_bridge
+   - test_all
    - report
 #   - test
 
@@ -39,8 +37,27 @@ default:
   tags:
     - br100
 
-test_cmd_show:
-   stage: test_cmd_show
+# test_cmd_show:
+#    stage: test_cmd_show
+#    image: python
+#    artifacts:
+#       when: always
+#       expire_in: 5 days
+#       paths:
+#             - backend/tests/report_html
+#    before_script:
+#       - apt-get update
+#       - pip install --upgrade pip
+#       - pip install -r backend/requirements.txt
+#    script:
+#       - cd backend/tests
+#       - pytest -v --html=report_html/BULAT_TEST.html test_cmd_show.py 
+#    allow_failure: true
+#    after_script:
+#       - cd backend/tests
+
+test_all:
+   stage: test_all
    image: python
    artifacts:
       when: always
@@ -53,51 +70,33 @@ test_cmd_show:
       - pip install -r backend/requirements.txt
    script:
       - cd backend/tests
-      - pytest -v --html=report_html/BULAT_TEST.html test_cmd_show.py 
-   allow_failure: true
-   after_script:
-      - cd backend/tests
-
-test_speed_interface:
-   stage: test_speed_interface
-   image: python
-   artifacts:
-      when: always
-      expire_in: 5 days
-      paths:
-            - backend/tests/report_html
-   before_script:
-      - apt-get update
-      - pip install --upgrade pip
-      - pip install -r backend/requirements.txt
-   script:
-      - cd backend/tests
-      - pytest -v --html=report_html/BULAT_TEST.html test_check_speed_interf.py 
-      - pytest -v --html=report_html/BULAT_TEST.html test_check_ip_bridge.py 
+      - pytest -v --html=report_html/BULAT_TEST_cmd_show.html test_cmd_show.py 
+      - pytest -v --html=report_html/BULAT_TEST_check_speed_interf.html test_check_speed_interf.py 
+      - pytest -v --html=report_html/BULAT_TEST_check_ip_bridge.html test_check_ip_bridge.py 
 
    allow_failure: true
    after_script:
       - cd backend/tests
 
 
-test_check_ip_bridge:
-   stage: test_check_ip_bridge
-   image: python
-   artifacts:
-      when: always
-      expire_in: 5 days
-      paths:
-            - backend/tests/report_html
-   before_script:
-      - apt-get update
-      - pip install --upgrade pip
-      - pip install -r backend/requirements.txt
-   script:
-      - cd backend/tests
-      - pytest -v --html=report_html/BULAT_TEST.html test_check_ip_bridge.py 
-   allow_failure: true
-   after_script:
-      - cd backend/tests
+# test_check_ip_bridge:
+#    stage: test_check_ip_bridge
+#    image: python
+#    artifacts:
+#       when: always
+#       expire_in: 5 days
+#       paths:
+#             - backend/tests/report_html
+#    before_script:
+#       - apt-get update
+#       - pip install --upgrade pip
+#       - pip install -r backend/requirements.txt
+#    script:
+#       - cd backend/tests
+#       - pytest -v --html=report_html/BULAT_TEST.html test_check_ip_bridge.py 
+#    allow_failure: true
+#    after_script:
+#       - cd backend/tests
 
 pages:
   stage: report
